src/browser/themes/shared/zen-browser-shared.css
/* ... */
#private-browsing-indicator-with-label {
  display: none !important;
}

.tabbrowser-tab::after {/* Containers */
  background: var(--identity-tab-color, transparent);
  border-radius: 2px;
  height: 80%;
  width: 2px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: -2px;
  content: '';
  pointer-events: none;
}

.tabbrowser-tab {
  margin-inline-start: 0 !important;
  margin: 0 auto !important;
}

.tabbrowser-tab[pinned] {
  position: relative !important;
}

#tabbrowser-tabs:has(.tabbrowser-tab[pinned]) .tabbrowser-tab:nth-child(1 of :not([pinned])) {
  margin-top: 15px !important;
  position: relative;
  overflow: visible;

  & .tab-stack::before {
    content: '';
    position: absolute;
    top: -11px;
    left: 0;
    width: 100%;
    height: 1.5px;
    border-radius: 1px;
    background: var(--zen-colors-border);
  }
}

.tab-close-button {
  position: absolute;
  display: none;
  left: 0;
  top: 50%;
}

.tabbrowser-tab:hover .tab-close-button {
  display: none; /* TODO: fix this? or maybe not? */
}

.tab-content {
  padding: 0 !important;
  width: fit-content;
}

.toolbar-items > toolbartabstop:first-child {
  display: none;
}

#TabsToolbar-customization-target {
  height: 100%;
}

#tabbrowser-tabs {
  margin-inline-start: 0 !important;
  padding-inline-start: 0 !important;
  border: none !important;
  /*background: light-dark(rgba(0,0,0,.05), rgba(255,255,255,.05));*/
  margin: 0 !important;
  border: none;
  height: 100%;
}

#tabbrowser-arrowscrollbox {
  margin: 3px 0 !important;
}

#alltabs-button stack {
  transform: rotate(-90deg);
}

.tab-icon-overlay {
  margin-inline-end: 0 !important;
  display: none !important; /* TODO: fix this */
}

/*#tabbrowser-arrowscrollbox {
  &::part(scrollbox-clip) {
    max-height: 405px;
  }
}*/

#zen-tabbox-wrapper {
  position: relative;
}

.footer-button {
  padding: var(--zen-button-padding) !important;
  border-radius: var(--zen-button-border-radius) !important;
}

.footer-button:not([default], .primary) {
  color: var(--zen-secondary-btn-color) !important;
}

.footer-button:is([default], .primary) {
  --focus-outline-color: var(--zen-primary-btn-color) !important;
}

/** Specific dialogs override */

#identity-popup-multiView toolbarseparator,
#editBookmarkHeaderSeparator {
  display: none;
}

#identity-popup-more-info-footer toolbarseparator {
  display: block;
}

#editBMPanel_foldersExpander {
  display: none;
}

#editBookmarkPanelContent > label:not(.editBMPanel_nameRow) {
  padding-top: 5px;
}

panelmultiview {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/** No space in panels overrides */

#tabbrowser-tabbox {
  background: var(--toolbar-bgcolor);
  display: flex;
  flex-direction: row;
}

:root:not([inDOMFullscreen="true"]) #tabbrowser-tabpanels {
  background: transparent !important;
  margin-right: 10px;
}

:root:not([inDOMFullscreen="true"]) #tabbrowser-tabbox #tabbrowser-tabpanels .browserSidebarContainer {
  border-radius: var(--zen-browser-border-radius);
  border: var(--zen-appcontent-border);
  width: 100%;
  margin: 0 10px 10px 0;
}

:root:not([inDOMFullscreen="true"]) #tabbrowser-tabbox #tabbrowser-tabpanels[zen-split-view="true"] .browserSidebarContainer {
  margin: 0 7px 7px 0;
}

#tabbrowser-tabbox #tabbrowser-tabpanels .browserStack > browser {
  border-radius: var(--zen-browser-border-radius);
  clip-path: inset(0px 0px 0px round var(--zen-browser-border-radius) 0) !important;
}

#nav-bar {
  padding-top: 5px;
  padding-bottom: 5px;
}

#urlbar[breakout]:not([breakout-extend="true"]) {
  top: unset;
}

#zen-main-app-wrapper {
  background: var(--zen-main-browser-background);
}

@media (-moz-bool-pref: "zen.view.compact") {
  :root[sizemode="fullscreen"],
  #navigator-toolbox[inFullscreen]{ margin-top: 0 !important; }
  
  #navigator-toolbox {
    position: absolute !important;
    display: block;
    transition: 50ms ease-in !important;
    right: calc(100% - 25px) !important;
    opacity: 0;
    line-height: 0;
    z-index: 1;
    pointer-events: none;
    height: 100%;
    padding: 0 !important;
    margin: 0 !important;

    & #titlebar {
      border-right: 1px solid var(--zen-colors-border);
      background: var(--zen-main-browser-background) !important;
      padding: 0 5px;
    }
  }
  
  #navigator-toolbox:hover,
  #navigator-toolbox:focus-within,
  #mainPopupSet:has(> #appMenu-popup:hover) ~ toolbox,
  #navigator-toolbox:has(*[open="true"]:not(tab)) {
    transition-delay: 33ms !important;
    left: 0 !important;
    opacity: 1;
  }
  
  #navigator-toolbox > *{ line-height: normal; pointer-events: auto }
  
  #navigator-toolbox,
  #navigator-toolbox > *{
    -moz-appearance: none !important;
  }

  #zen-sidebar-splitter {
    display: none !important;
  }
  
  /* Don't apply transform before window has been fully created */
  :root:not([sessionrestored]) #navigator-toolbox{ transform:none !important }
  
  :root[customizing] #navigator-toolbox{
    position: relative !important;
    transform: none !important;
    opacity: 1 !important;
  }
  
  #navigator-toolbox[inFullscreen] > #PersonalToolbar,
  #PersonalToolbar[collapsed="true"]{ display: none }

  :root:not([inDOMFullscreen="true"]) #tabbrowser-tabbox #tabbrowser-tabpanels .browserSidebarContainer {
    margin-left: 10px !important;
    margin-right: 10px !important;
  }
}

:root:is([chromehidden~="location"],[chromehidden~="toolbar"]) {
  --zen-browser-border-radius: 0 !important;

  & #navigator-toolbox {
    display: none;
  }

  & #tabbrowser-tabpanels {
    margin: 0 !important;

    & .browserSidebarContainer {
      margin: 0 !important;
    }
  }

  & #zen-sidebar-splitter {
    display: none !important;
  }
}

/* Screenshots */

#screenshotsPagePanel {
  position: absolute;
  top: 3%;
  right: 1.5%;
}
/* ... */

